Additional code clean-up